k8s/ingress/nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: harifarms-ingress
  namespace: harifarms
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: harifarms.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: harifarms-app
                port:
                  number: 80
